# TechniqueTitan

./: .gitignore  Computer Vision Algorithm Progress Document.docx  HandTrackingMin.py  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
PycharmProjects/HandTrackingProject/: HandTrackingMin.py  HandTrackingModule.py
config/: coaching.yaml  scoring.yaml
data/: README.md  labels_template.csv
docs/: PRD.md  ROADMAP.md  SCORING_METHODS.md
legacy/: README.md
scripts/: README.md
src/technique_titan/: __init__.py  analysis.py  coaching.py  scoring.py
src/technique_titan/batch/: process_folder.py
src/technique_titan/detection/: __init__.py  hand_detector.py
src/technique_titan/features/: __init__.py  extract.py  finger_curvature.py  hand_arch.py  thumb_position.py  wrist_height.py  wrist_lateral.py
src/technique_titan/geometry/: __init__.py  landmarks.py  vectors.py
tests/: conftest.py  test_analysis.py  test_coaching.py  test_features.py  test_geometry.py  test_scoring.py
